# VkRuna

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md
app/: CMakeLIsts.txt  main.cpp  vk_layer_settings.txt  wndproc.cpp  wndproc.h
game/: CMakeLists.txt  CameraManager.cpp  CameraManager.h  Game.h  GameLocal.cpp  GameLocal.h
platform/: CMakeLists.txt  Check.h  Console.cpp  Console.h  Heap.cpp  Heap.h  Serializable.cpp  Serializable.h  Sys.cpp  Sys.h  Sys.inl  Window.cpp  Window.h  defines.h
renderer/: Backend.cpp  Backend.h  Buffer.cpp  Buffer.h  CMakeLists.txt  GPUMailManager.cpp  GPUMailManager.h  Image.cpp  Image.h  RenderConfig.h  RenderProgs.cpp  RenderProgs.h  RenderSystem.cpp  RenderSystem.h  Shader.cpp  Shader.h  ShaderLexer.cpp  ShaderLexer.h  State.cpp  State.h  UiBackend.cpp  UiBackend.h  VFX.cpp  VFX.h  VkAllocator.cpp  VkAllocator.h  VkBackend.cpp  VkBackend.h  VkRenderCommon.h  VkRenderSystem.cpp  VkRenderSystem.h  VkUtil.cpp  VkUtil.h  check.h  vfxtypes.h
renderer/shaderGen/: GlobalsFunctions.glsl  VFXCommonCode.glsl  VFXComputeCode.glsl  VFXComputeFooter.glsl  VFXComputeHeader.glsl  VFXComputeMainHead.glsl  VFXFragmentFooter.glsl  VFXFragmentMain.glsl  VFXVertexCode.glsl  VFXVertexHeader.glsl  VFXVertexMain.glsl
renderer/shaderGen/primitives/: VFXFragmentCube.glsl  VFXFragmentQuad.glsl  VFXVertexCube.glsl  VFXVertexQuad.glsl
renderprogs/lib/: brianSharpeNoise.glsl  math.glsl  noise.glsl  rand.glsl  utils.glsl
renderprogs/samples/: cubes.vfx  superformula.vfx  swarm-test.vfx  swarm.vfx  twist.vfx
renderprogs/shaders/: cubes.comp  cubes.frag  cubes.vert  superformula.comp  superformula.frag  superformula.vert  swarm.comp  swarm.frag  swarm.vert  twist.comp  twist.frag  twist.vert
rnLib/: CMakeLists.txt  Camera.cpp  Camera.h  Event.h  Math.h
ui/: CMakeLists.txt  controller.cpp  controller.h  ui.cpp  ui.h  vfxui.cpp  vfxui.h
